Update OpenGraph to use HTTPS urls

--- a/src/Volvox.Helios.Web/Views/Shared/_Layout.cshtml
+++ b/src/Volvox.Helios.Web/Views/Shared/_Layout.cshtml
@@ -7,12 +7,12 @@
     <meta name="google-site-verification" content="18JHtM67T9ZVSSo1HwwLB5r8lghAxcJba3RRZb3r_Lg" />
     <meta property="og:title" content="Volvox.Helios" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="http://www.volvox.tech/" />
+    <meta property="og:url" content="https://www.volvox.tech/" />
     <meta property="og:locale" content="en_US" />
-    <meta property="og:image" content="http://www.volvox.tech/images/volvox.png" />
+    <meta property="og:image" content="https://www.volvox.tech/images/volvox.png" />
     <meta property="og:image:width" content="394" />
     <meta property="og:image:height" content="400" />
-    <meta property="og:description" content="A powerful, community built discord bot." />
+    <meta property="og:description" content="Powerful, modular, web-managed, open-source Discord bot created by a community for communities." />
     <title>@ViewData["Title"] - Volvox.Helios</title>
 
     <environment include="Development">
