--- a/src/Volvox.Helios.Web/wwwroot/css/site.css
+++ b/src/Volvox.Helios.Web/wwwroot/css/site.css
@@ -142,3 +142,9 @@ input:checked + .slider:before {
 }
 
 /*****************************************/
+
+
+.settings-group {
+  border-bottom: 1px #1d1c1c solid;
+  margin-bottom:10px;
+}
