--- a/src/Volvox.Helios.Web/Views/Home/Index.cshtml
+++ b/src/Volvox.Helios.Web/Views/Home/Index.cshtml
@@ -4,9 +4,9 @@
 
 <div class="row">
     <div class="col-12">
-        @* <h1 class="text-center">Volvox.Helios</h1> *@
         <div class="text-center">
-            <img src="images/volvox.png" alt="Volvox.Helios"/></div>
+            <img src="images/volvox.png" alt="Volvox.Helios"/>
+        </div>
     </div>
 </div>
 
