--- a/src/Volvox.Helios.Web/Views/Shared/_Layout.cshtml
+++ b/src/Volvox.Helios.Web/Views/Shared/_Layout.cshtml
@@ -10,8 +10,8 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.volvox.tech/" />
     <meta property="og:locale" content="en_US" />
-    <meta property="og:image" content="https://www.volvox.tech/images/volvox.png" />
-    <meta property="og:image:width" content="394" />
+    <meta property="og:image" content="https://www.volvox.tech/images/large/volvox-icon.png" />
+    <meta property="og:image:width" content="400" />
     <meta property="og:image:height" content="400" />
     <meta property="og:description" content="Powerful, modular, web-managed, open-source Discord bot created by a community for communities." />
     <title>@ViewData["Title"] - Volvox.Helios</title>
@@ -28,7 +28,7 @@
         <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     </environment>
-    <link rel="icon" type="image/x-icon" href="~/images/volvox-favicon.png">
+    <link rel="icon" type="image/x-icon" href="~/images/small/volvox-icon.png">
     @Html.Raw(JavaScriptSnippet.FullScript)
 </head>
 <body>
