--- a/src/Volvox.Helios.Web/Views/Home/Index.cshtml
+++ b/src/Volvox.Helios.Web/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 <div class="row">
     <div class="col-12">
         <div class="text-center">
-            <img src="images/volvox.png" alt="Volvox.Helios"/>
+            <img class="home-page-banner" src="images/large/volvox-combinationmark.png" alt="Volvox.Helios"/>
         </div>
     </div>
 </div>
