minor styling changes

--- a/src/Volvox.Helios.Web/Views/Moderation/LinkFilter.cshtml
+++ b/src/Volvox.Helios.Web/Views/Moderation/LinkFilter.cshtml
@@ -64,8 +64,10 @@
                 </div>
             </div>
 
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-success" />
+            <div class="form-group" style="margin:10px auto; text-align: center;">
+                <button type="submit" value="Save" class="btn btn-success" style="width:100%;">
+                    Save <i class="fas fa-save" style="margin-left:0.5em;"></i>
+                </button>
             </div>
         </form>
     </div>
