--- a/src/Volvox.Helios.Web/Views/Dashboard/Partials/_DashboardHeader.cshtml
+++ b/src/Volvox.Helios.Web/Views/Dashboard/Partials/_DashboardHeader.cshtml
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-12">
         <h1 class="d-inline-block">Dashboard</h1>
-            <button class="btn btn-info btn-sm dropdown-toggle float-right" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <button class="btn btn-info dropdown-toggle float-right" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Select Server
             </button>
         <div class="dropdown-menu">
