--- a/src/Volvox.Helios.Web/Views/Dashboard/Partials/_DashboardHeader.cshtml
+++ b/src/Volvox.Helios.Web/Views/Dashboard/Partials/_DashboardHeader.cshtml
@@ -9,7 +9,7 @@
         <div class="dropdown-menu" id="dashboardSelectGuildDropdown">
             @foreach (var guild in Model)
             {
-                <a class="dropdown-item dropdown-item-container" asp-action="Index">
+                <a class="dropdown-item dropdown-item-container" asp-action="Details" asp-route-guildId="@guild.Id">
                     <span>
                         <img class="dropdown-image-small" src="@guild.ImageUrl" alt="@guild.Name">
                     </span>
