--- a/src/Volvox.Helios.Web/Views/Shared/_NavigationPartial.cshtml
+++ b/src/Volvox.Helios.Web/Views/Shared/_NavigationPartial.cshtml
@@ -11,7 +11,7 @@
 @if (User?.Identity?.IsAuthenticated ?? false)
 {
     <li class="nav-item">
-        <a class="nav-link" asp-area="" asp-controller="Dashboard" asp-action="Index" asp-is-active>Dashboard</a>
+        <a class="nav-link" asp-area="" asp-controller="Dashboard" asp-action="Index" asp-is-active match-controller>Dashboard</a>
     </li>
 
     <li class="nav-item dropdown">
