--- a/src/Volvox.Helios.Web/Views/Dashboard/Partials/_DashboardCard.cshtml
+++ b/src/Volvox.Helios.Web/Views/Dashboard/Partials/_DashboardCard.cshtml
@@ -7,5 +7,13 @@
 
 else
 {
-    @:Member Count: @Model.Details.MemberCount
+    <div>
+        Member Count: @Model.Details.MemberCount
+    </div>
+    <div>
+        Role Count: @Model.Details.Roles.Count
+    </div>
+    <div>
+        Channel Count: @Model.Details.Channels.Count
+    </div>
 }
